--- a/home.html
+++ b/home.html
@@ -6,13 +6,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Currículo</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
 
     </head>
 
     <body>
 
         <h1>Currículo</h1>
-        
+
 
     </body>
 
